@@ -1,4 +1,4 @@
-$Header: /data/zender/nco_20150216/nco/doc/ANNOUNCE,v 1.373 2010-07-29 18:16:40 zender Exp $ -*-text-*-
+$Header: /data/zender/nco_20150216/nco/doc/ANNOUNCE,v 1.374 2010-08-30 23:02:42 zender Exp $ -*-text-*-
 
 The netCDF operators NCO version 4.0.3 are ready. 
 
@@ -22,6 +22,9 @@ A. Configure works better with ncap2, netCDF4, UDUnits2, and netCDF-DAP
 
 A. Correctly write averaged date with ncra on CCM/CCSM/CF files
    Fixes bug introduced in 4.0.1 that can segfault on ncra averages
+
+A. Fix bug exposed only by xlC compilers that caused ncbo segfaults on AIX
+   fxm
 
 "Sticky" reminders:
 
