@@ -6,6 +6,8 @@
 	cd ~/nco;cvs commit -m "Preparing nco-4.0.3 release"
 	cvs tag -c nco-4_0_3;cvs tag -c nco-4_0_3-1
 
+	* Document TODO nco986, an ncbo bug exposed by AIX xlC compilers. No fix yet.
+
 	* Clean-up nco_cal.c
 
 2010-08-09  Charlie Zender  <zender@uci.edu>
